--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel ="icon" href="radi.png" type="image/png" sizes="16x16"/>
         <meta name="author" content="Lucía Reyes Jiménez"/>
         <meta name="robots" content="noindex,follow" />
         <meta name="description" content="Mejores destinos de viaje"/>
         <meta name="keywords" content="viajes"/>
         <title>Mejores destinos turísticos</title>
-        <body>
-            
-        </body>
     </head>
+    <body>
+        <h1><b>Mejores destinos turísticos</b></h1>
+        <h2><b>¿Cuál es el mejor destino para realizar un viaje en 2022?</b></h2>
+    </body>
 </html>
