--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel ="icon" href="radi.png" type="image/png" sizes="16x16"/>
-        <meta name="author" content="Lucía Reyes Jiménez"/>
-        <meta name="robots" content="noindex,follow" />
-        <meta name="description" content="Mejores destinos de viaje"/>
-        <meta name="keywords" content="viajes"/>
-        <title>Mejores destinos turísticos</title>
-    </head>
-    <body>
-        <h1><b>Mejores destinos turísticos</b></h1>
-        <h2><b>¿Cuál es el mejor destino para realizar un viaje en 2022?</b></h2>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="icons" href="viajes.png" type="image/png" sizes="16x16" />
+    <meta name="author" content="Lucía Reyes Jiménez" />
+    <meta name="robots" content="noindex,follow" />
+    <meta name="description" content="Mejores destinos de viaje" />
+    <meta name="keywords" content="viajes" />
+    <title>Mejores destinos turísticos</title>
+</head>
+
+<body>
+    <h1><b>¿Cuál es el mejor destino para realizar un viaje en 2022?</b></h1>
+    <h2><b>Destinos no habituales para vacaciones en pareja, familia o con amigos</b></h2>
+    <p>Uno de los lugares más visitados en este 2021 fue la isla de <u>Zanzíbar</u>, en Tanzania<br>
+        En este maravilloso destino de viaje, los turistas disfrutan de unas grandes vacaciones en la playa y a la vez
+        de unas vacaciones inolvidables, aventurandose en el safari disponible a pocos kilómetros de la isla</p>
+</body>
+
 </html>
