--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icons" href="viajes.png" type="image/png" sizes="16x16" />
+    <link rel="icons" href=".icons/viajes.png" type="image/png" sizes="16x16" />
     <meta name="author" content="Lucía Reyes Jiménez" />
     <meta name="robots" content="noindex,follow" />
     <meta name="description" content="Mejores destinos de viaje" />
@@ -16,6 +16,7 @@
     <p>Uno de los lugares más visitados en este 2021 fue la isla de <u>Zanzíbar</u>, en Tanzania<br>
         En este maravilloso destino de viaje, los turistas disfrutan de unas grandes vacaciones en la playa y a la vez
         de unas vacaciones inolvidables, aventurandose en el safari disponible a pocos kilómetros de la isla</p>
+    <img src="./images/Diseno-sin-titulo2.png" alt="Disfruta de un safari en Tanzania" width="800" />
 </body>
 
 </html>
