--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="icons" href=".icons/viajes.png" type="image/png" sizes="16x16" />
-    <meta name="author" content="Lucía Reyes Jiménez" />
-    <meta name="robots" content="noindex,follow" />
-    <meta name="description" content="Mejores destinos de viaje" />
-    <meta name="keywords" content="viajes" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Lucía Reyes Jiménez">
+    <meta name="robots" content="noindex,follow">
+    <meta name="description" content="Mejores destinos de viaje">
+    <meta name="keywords" content="viajes">
     <title>Mejores destinos turísticos</title>
 </head>
 
 <body>
-    <h1><b>¿Cuál es el mejor destino para realizar un viaje en 2022?</b></h1>
-    <h2><b>Destinos no habituales para vacaciones en pareja, familia o con amigos</b></h2>
-    <p>Uno de los lugares más visitados en este 2021 fue la isla de <u>Zanzíbar</u>, en Tanzania<br>
-        En este maravilloso destino de viaje, los turistas disfrutan de unas grandes vacaciones en la playa y a la vez
-        de unas vacaciones inolvidables, aventurandose en el safari disponible a pocos kilómetros de la isla</p>
-    <img src="./images/Diseno-sin-titulo2.png" alt="Disfruta de un safari en Tanzania" width="800" />
+    <h1 style="text-align:center"><b>¿Cuál es el mejor destino para realizar un viaje en 2022?</b></h1>
+    <h2 style="text-align:center"><b>Destinos no habituales para vacaciones en pareja, familia o con amigos.</b></h2>
+    <hr style="border-color:black; width:50%;">
+    <p>Uno de los lugares más visitados en este 2021 fue la isla de <b><u>Zanzíbar</u></b>, en <b><i>Tanzania.</i></b><br>
+        En este maravilloso destino de viaje, los turistas disfrutan de unas grandes vacaciones en la playa a la vez
+        que experimentan unas experiencias inolvidables, aventurandose en el safari disponible a pocos kilómetros de la
+        isla.</p>
+    <p style="text-align: center;"><img src="./images/Diseno-sin-titulo2.png" alt="Disfruta de un safari en Tanzania"  width="600"/></p>
 </body>
 
 </html>
