--- a/index.html
+++ b/index.html
@@ -9,18 +9,62 @@
     <meta name="robots" content="noindex,follow">
     <meta name="description" content="Mejores destinos de viaje">
     <meta name="keywords" content="viajes">
-    <title>Mejores destinos turísticos</title>
+    <title>¿Dónde vamos?</title>
+    <link rel="icon" href="./icons/viaje.png" type="image/png" sizes="16x16" />
 </head>
 
 <body>
     <h1 style="text-align:center"><b>¿Cuál es el mejor destino para realizar un viaje en 2022?</b></h1>
     <h2 style="text-align:center"><b>Destinos no habituales para vacaciones en pareja, familia o con amigos.</b></h2>
     <hr style="border-color:black; width:50%;">
-    <p>Uno de los lugares más visitados en este 2021 fue la isla de <b><u>Zanzíbar</u></b>, en <b><i>Tanzania.</i></b><br>
-        En este maravilloso destino de viaje, los turistas disfrutan de unas grandes vacaciones en la playa a la vez
-        que experimentan unas experiencias inolvidables, aventurandose en el safari disponible a pocos kilómetros de la
-        isla.</p>
-    <p style="text-align: center;"><img src="./images/Diseno-sin-titulo2.png" alt="Disfruta de un safari en Tanzania"  width="600"/></p>
+    <h3><u><b>Principales medidas de viaje <i>protocolo covid</i></b></u></h3>
+    <p>Se recuerda que en las situaciones de pandemia que vivimos es recomendable no realizar viajes, pero si aún así se
+        decide viajar se le recuerda en esta página las medidas de seguridad que se deben tomar.<br><mark><u>Téngase en
+                cuenta que las restricciones dependen en muchos casos del origen, destino, nacionalidad,...</u></mark>
+    </p>
+    <img src="./images/aeropuerto.jpg" style="float: right; margin: 0 1000 0em 0em" alt="Restricciones aeropuerto"
+        width="600" />
+    <p><b> No debe viajar si:</b><br>- Tiene síntomas compatibles con <i>COVID-19.</i><br>- Ha sido diagnosticado de
+        <i>COVID-19</i> en los últimos 7 días.<br>- Si ha tenido contacto estrecho con un caso positivo.<br>- Si el
+        país/zona es considerado como alto riesgo de <i>COVID-19.</i>
+    </p>
+    <p><b> Requisitos generales si no está vacunado:</b><br>- Test de COVID-19 <b>negativo.</b><br>- Formulario de
+        Localización de Pasajeros.<br>- En algunos países pueden llegar a solicitarte una carente de entre 10 y 14 días.
+    </p>
+    <p><b> Requisitos generales si está vacunado:</b><br>- El pasajero será posiblimente exento de presentar el test
+        de antígenos negativo.<br>- Presentar cerficado COVID-19 de vacunas.</p>
+    <p><small> Obviamos en estos requisitos las restricciones básicas que llevamos aplicando en estos dos años de
+            pandemia (uso de mascarilla, distancia social, gel hidroalcohólico...)</small></p>
+
+    <h3><b>Top 3 ciudades más visitada en 2021</b></h3>
+
+    <p><b>Dubái: </b>se coloca en la cúspide de la pirámide, siendo la ciudad más visitada en 2021 (también fue la más
+        visitada del mundo en 2019).<br>Dubái es uno de los siete emiratos que conforman los Emiratos Árabes Unidos. El
+        turismo de esta ciudad se ha visto favorecido por su ubicación geográfica, estando situado en la costa del golfo
+        Pérsico, en Medio Oriente. Dubái alberga varias construcciones y obras de infraestructura notables como los
+        hoteles de lujo <q></q><u>Burj Al Arab</u></q> y <q><u>Burj Khalifa</u></q>, siendo este último el más alto del
+        mundo, contando con 828 m de altura.</p>
+    <img src="./images/Dubai.jpg" style="float: right; margin: 0 1000 1em 1em" alt="Dubái" width="500" />
+    <p><u>Qué ver y hacer en Dubái:</u><br><u>1. Burj Khalifa: </u>es el edicio más alto del mundo, con 828 metros de altura,
+        pues se puede ver desde 100 km de distancia. Este hotel cuenta con un observatorio en la planta 148, a 555
+        metros. Las vistas son chocantes, pues es el único edifico tan alto en una ciudad rodeaada de desierto. Este
+        edifio cuenta con plantas de hotel, oficinas, restaurante, piscina y mezquita</p>
+    <p><u>2. Dubai Fountains: </u>para seguir con los récords, estas fuentes danzantes son las más grandes del mundo.
+        Situadas a los pies del Burj Khalifa, hacen un espectáculo diario con agua, luces y música. Los chorros de agua
+        llegan a 275 metros de altura.</p>
+    <p><u>3. The Dubai Mall: </u>se trata de un centro comercial que cuenta con 1200 tiendas y restaurantes, galerías
+        ambientadas como si fueran un zoco, un parque temático para niños, una cascada interior, una pista de patinaje
+        sobre hielo, un acuario y un centro médico</p>
+    <p><u>4. Excursión al desierto: </u>el desierto es algo obligado que ver en Dubái. Se encuentra justo a las afueras de
+        la ciudad. No te pierdas una travesía en 4x4 o quad por las dunas, una experiencia de adrenalina pura.</p>
+    <p><u>5. Burj al Arab: </u>es el hotel más alto del mundo, con 321 m de altura. Cuenta con una clasificación de 7 estrellas, por lo que, además de ser el más alto del mundo, es también el más lujoso. Se ubica en su propia isla artificial, a la que solo se puede acceder si eres cliente del hotel, aunque también se puede acceder reservando una comida</p>
+    <p><u>6. Barrio histórico Al Fahidi: </u>la parte más tradicional de la ciudad es preciosa. Este barrio fue construido a finales del siglo XIX y allí vivían los mercaderes persas. Los edificios de yeso y coral de estilo árabe se encuentran perfectamente conservados. También existen unos pequeños museos dedicados a las monedas del país.</p>
+    <p><u>7. Abu Dhabi: </u>sería una pena estar tan cerca de Abu Dhabi y quedarse sin visitar la ciudad. Su principal atractivo es la gran mezquita de Sheikh Zayed. Si te interesa el arte, puedes hacer una excursión con visita a la mezquita y al museo Louvre de Abu Dhabi.</p>
+    <p><b>Cancún: </b>es una ciudad mexicana ubicada en el estado de Quintana Roo, en el oriente de México. Es considerada un destino turístico de talla mundial. El sector turístico es la principal fuente de ingresos de la ciudad, la cual cuenta con la más variada diversión nocturna, siendo principal destino turístico del Caribe y de toda América Latina</p>
+    <img src="./images/cancun.jpg" style="float: right; margin: 0 1000 1em 1em" alt="Cancún" width="500" />
+    <p><u>Qué ver y hacer en Cancún:</u><br><u>1. Relajarte en las playas: </u></p>
+    <p><b>Estambul: </b></p>
+
 </body>
 
 </html>
